<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="app_name">はちこま</string>
  <string name="setup_intro_message">Googleカレンダーと連携して\nあなたと誰かの予定調整を\nお手伝い</string>

  <string name="setup_intro_detail">お互いに都合の良い日程を自動提案,数タップで予定調整完了, 予定はカレンダーに自動反映 , Emailとも連携</string>

  <string name="text_in_walkthrough1">まずは誘う人を選びます。\n選んだら参加者のカレンダーを考慮してはちこまが会えそうな日時を提案するので、\nあとはいくつか候補日時を選び誘うだけです。</string>
  <string name="text_in_walkthrough2">はちこまユーザ以外ももちろん誘えます。その場合は発行されたURLやメール内のフォームから回答を集めます。</string>
  <string name="text_in_walkthrough3">誘われた時もあらかじめ自分の予定が考慮されているので、無意味なやりとりはありません。数タップで回答でき、信頼できる相手なら自動回答も可能です。</string>
  <string name="setup_start_auth">Googleアカウントで認証</string>
  <string name="setup_calendar_text">お使いのカレンダーを登録することで，あなたの開いている時間に予定を設定するお手伝いをします</string>
  <string name="setup_calendar_confirm">次へ進む</string>
  <string name="prefs_set_calendars">利用するカレンダーの設定</string>
  <string name="prefs_set_calendars_dialog">利用するカレンダー</string>
  <string name="setup_user_registering">はちこまを快適にお使いいただくための準備をしています...</string>
  <string name="setup_login_confirm">次へ進む</string>
  <string name="settled_schedules">確定済み</string>
  <string name="unsettled_schedules">調整中</string>
  <string name="hachiko_user">はちこまユーザ</string>
  <string name="action_launch_calendar_app">外部カレンダーアプリ</string>
  <string name="action_reload_events">予定のリロード</string>
  <string name="action_create_event">新しい予定</string>
  <string name="action_config">設定</string>
  <string name="hint_on_search_friends">誘いたい人の名前</string>
  <string name="create_group">グループを作成</string>
  <string name="create_event_detail_text">詳細を入力</string>
  <string name="confirm_button_label">確認</string>
  <string name="what_to_do_default">予定の内容を入力してください</string>
  <string name="with_who_label">参加者</string>
  <string name="when_label">いつ？</string>
  <string name="days_after_label">日後ごろ</string>
  <string name="minutes">分</string>
  <string name="recent_schedules">直近の予定を確認</string>
  <string name="unresponded_participants">未回答者:</string>


  <string name="icon_question_sign">&#xf059;</string>
  <string name="icon_smile">&#xf118;</string>
  <string name="icon_frown">&#xf119;</string>
  <string name="icon_check">&#xf046;</string>
  <string name="icon_angle_double_up">&#xf102;</string>
  <string name="icon_remind">&#xf0f3;</string>
  <string name="icon_demand">&#xf0a1;</string>
  <string name="icon_unfixed_guest_plan">&#xf01a;</string>
  <string name="icon_unfixed_host_plan">&#xf01b;</string>
  <string name="icon_fixed_plan">&#xf05d;</string>
  <string name="icon_replyall">&#xf0c0;</string>
  <string name="icon_invite">&#xf0f4;</string>
  <string name="icon_invited">&#xf0f5;</string>

  <string-array name="positive_num_list">
    <item>1</item>
    <item>2</item>
    <item>3</item>
    <item>4</item>
    <item>5</item>
    <item>6</item>
  </string-array>
  <string-array name="time_words">
    <item>朝</item>
    <item>昼</item>
    <item>夕</item>
    <item>夜</item>
  </string-array>
  <string-array name="duration">
    <item>30分</item>
    <item>1時間</item>
    <item>1時間半</item>
    <item>2時間</item>
    <item>2時間半</item>
    <item>３時間</item>
  </string-array>
  <string name="invite_button_label">この日程で誘う</string>
  <string name="confirm_new_event_text">予定を確認</string>
  <string name="confirm_new_event_back">戻る</string>
  <string name="confirm_new_event_ok">招待を送信</string>
  <string name="no_event_text">まだ予定が\nありません・・</string>
  <string name="no_event_then_create_new">新しい予定を作成する</string>
  <string name="guests_choice_confirm">招待する</string>
  <string name="demand">回答を催促する</string>
  <string name="remind">リマインドする</string>
</resources>
