<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
  <item android:id="@+id/action_reload_events"
        android:icon="@drawable/ic_action_refresh"
        android:title="@string/action_reload_events"
        android:showAsAction="always" />
  <item android:id="@+id/action_create_event"
        android:icon="@drawable/ic_action_new_event"
        android:title="@string/action_create_event"
        android:showAsAction="always" />
  <item android:id="@+id/action_launch_calendar_app"
        android:icon="@drawable/ic_external_calendar"
        android:title="@string/action_launch_calendar_app" />
  <item android:id="@+id/action_config"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/action_config" />
</menu>