<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:background="@color/background_color_gray"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:layout_margin="10dp"
      android:layout_marginTop="15dp"
      android:background="@color/background_white">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp">
      <LinearLayout
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center_horizontal">
        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_launcher"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="5dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="48dp"
            android:textColor="@color/main_accent_color"
            android:layout_gravity="center_vertical"/>
      </LinearLayout>
      <include layout="@layout/horizontal_line_gray"/>
      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/setup_intro_message"
          android:paddingTop="10dp"
          android:paddingLeft="20dp"
          android:paddingRight="20dp"
          android:textColor="@color/font_color_normal"/>
      <WebView
          android:id="@+id/setup_intro_detail"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:paddingTop="10dp"
          android:paddingLeft="20dp"
          android:paddingRight="20dp"
          android:textColor="@color/font_color_normal"/>
    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/start_auth_button"
        android:text="@string/setup_start_auth"
        android:textSize="22sp"
        android:background="@drawable/btn_color_stateful"
        android:textColor="@color/font_color_white"
        android:clickable="true"
        android:layout_marginTop="15dp"/>
  </LinearLayout>
</LinearLayout>
