<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:paddingTop="5dp"
      android:paddingBottom="5dp"
      android:paddingLeft="10dp"
      android:text="@string/confirm_new_event_text"
      android:id="@+id/confirm_new_event_text"
      android:background="#d7d7d7"/>
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:id="@+id/confirm_new_event_buttons"
      android:layout_alignParentBottom="true">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_new_event_back"
        android:layout_weight="1"
        android:id="@+id/confirm_new_event_back"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_new_event_ok"
        android:layout_weight="1"
        android:id="@+id/confirm_new_event_ok"/>
  </LinearLayout>
  <ScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_below="@id/confirm_new_event_text"
      android:layout_above="@id/confirm_new_event_buttons"
      android:id="@+id/scrollView">
    <LinearLayout
        android:orientation="vertical"
        android:layout_height="fill_parent"
        android:layout_width="fill_parent"
        android:layout_marginLeft="5dp">
      <LinearLayout
          android:orientation="vertical"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="3dp"
          android:layout_marginBottom="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/with_who_label"/>
        <include layout="@layout/horizontal_line"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/friends_name_to_invite"/>
      </LinearLayout>
      <LinearLayout
          android:orientation="vertical"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="3dp"
          android:layout_marginBottom="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/what_label"/>
        <include layout="@layout/horizontal_line"/>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="5dp"
            android:gravity="center_vertical">
          <ImageView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:id="@+id/confirm_event_event_category_img" />
          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="予定の種類(例:飲み会)が表示されていません．"
              android:gravity="center_vertical"
              android:id="@+id/confirm_event_event_category_text" />
        </LinearLayout>
      </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="10dp">
      <TextView
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:text="候補日"/>
      <include layout="@layout/horizontal_line"/>
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical"
          android:paddingLeft="20dp"
          android:id="@+id/schedules"/>
      </LinearLayout>
    </LinearLayout>
  </ScrollView>
</RelativeLayout>