<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:layout_gravity="center_vertical"
    android:orientation="vertical"
    android:background="@color/background_color_gray" android:clickable="false">

  <ScrollView
      android:layout_height="wrap_content"
      android:layout_width="fill_parent"
      android:fillViewport="true" android:layout_alignParentTop="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_height="fill_parent"
        android:layout_width="fill_parent"

            >
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/background_white"
                android:layout_margin="5dp" android:padding="5dp">

            <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/with_who_label"/>
            <include layout="@layout/horizontal_line_gray"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/friends_name_to_invite"/>
        </LinearLayout>

        <EditText
                android:id="@+id/what_to_do"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/background_white"
                android:layout_margin="5dp" android:padding="5dp" android:hint="@string/what_to_do_default"/>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/background_white" android:layout_margin="5dp">

            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                <Spinner
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/days_after_spinner"
                        android:entries="@array/positive_num_list"
                        android:layout_weight="5"
                        android:clickable="false"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="〜"/>

                <Spinner
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/time_words_spinner"
                        android:layout_weight="5"
                        android:entries="@array/time_words"/>
            </LinearLayout>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="55dp" android:orientation="horizontal">
                <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/minutes_wrapper"
                        android:layout_alignParentRight="true">
                    <Spinner
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/duration_spinner"
                            android:layout_marginLeft="10dp"
                            android:entries="@array/duration"/>

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/minutes"/>
                </LinearLayout>
                <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent" android:layout_alignParentLeft="true">
                    <Button
                            android:layout_width="96dp"
                            android:layout_height="wrap_content"
                            android:text="来週中"
                            android:id="@+id/button" android:layout_margin="0dp"/>
                    <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="直近"
                            android:id="@+id/button1"/>
                    <Button
                            android:layout_width="84dp"
                            android:layout_height="wrap_content"
                            android:text="自由に"
                            android:id="@+id/button2"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">
                <ToggleButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="abc"
                        android:layout_weight="1"
                        android:id="@+id/toggleButton"/>
                <ToggleButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="New ToggleButton"
                        android:layout_weight="1"
                        android:id="@+id/toggleButton"/>
                <ToggleButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="New ToggleButton"
                        android:layout_weight="1"
                        android:id="@+id/toggleButton"/>
                <ToggleButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="New ToggleButton"
                        android:layout_weight="1"
                        android:id="@+id/toggleButton"/>
            </LinearLayout>
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:layout_marginBottom="10dp">
                <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="下の日程で招待を送ります(スワイプで日程変更)" android:background="@color/background_color_gray"
                        />
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingLeft="20dp"
                        android:id="@+id/schedules"/>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
  </ScrollView>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm_button_label"
        android:id="@+id/invite_button"
        android:layout_alignParentBottom="true" android:background="@color/background"
        android:textColor="@color/font_color_white"/>
</RelativeLayout>